ajout de l'attribut title sur les liens des réseaux sociaux

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<h2>L'agence La Panthère est une agence de webdesign qui aide les entreprises à devenir attractives et visibles sur Internet.</h2>
+				<h2 class="services">L'agence La Panthère est une agence de webdesign qui aide les entreprises à devenir attractives et visibles sur Internet.</h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -160,7 +160,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<h2>
+				<h2 class="realisations">
 					Nous travaillons avec beaucoup de clients, voici nos réalisations.
 				</h2>
 			</div>
@@ -243,22 +243,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://twitter.com/agence-la-panthere-lyon"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="https://twitter.com/agence-la-panthere-lyon" title="Twitter"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://fr-fr.facebook.com/agence-la-panthere-lyon"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="https://fr-fr.facebook.com/agence-la-panthere-lyon" title="Facebook"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://dribbble.com/agence-la-panthere-lyon"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="https://dribbble.com/agence-la-panthere-lyon" title="Dribbble"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.instagram.com/agence-la-panthere-lyon"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="https://www.instagram.com/agence-la-panthere-lyon" title="Instagram"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
