--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Image représantant une tête de panthère, le logo de l'agenge La Panthère" height="40" ></a>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Image représantant une tête de panthère, le logo de l'agence La Panthère" height="40" ></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -44,7 +44,7 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html">Accueil</a>
+						<a href="/">Accueil</a>
 					</li>
 					<li>
 					</li>
@@ -63,7 +63,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Image représantant une tête de panthère, le logo de l'agenge La Panthère">
+				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Le logo de l'agence La Panthère">
 				<h1 class="text-center hero-bloc-text tc-white ">
 					Agence La Panthère, entreprise de web design à Lyon
 				</h1>
@@ -203,7 +203,7 @@
 			</div>
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
-					<img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="Image d'une table de travail avec un ordinateur, une paire de sciseaux, des rubans et divers éléments">
+					<img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="Image d'une table de travail avec un ordinateur et divers éléments">
 				</a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
