modification de certaines règles CSS pour l'accessibilité

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Image représantant une tête de panthère, le logo de l'agence La Panthère" height="40" ></a>
+				<img src="img/agence-la-panthere-monochrome.svg" alt="Image représantant une tête de panthère, le logo de l'agence La Panthère" height="40" >
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -44,7 +44,7 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="/">Accueil</a>
+						<a href="index.html">Accueil</a>
 					</li>
 					<li>
 					</li>
@@ -268,16 +268,16 @@
 				</div>
 				<div class="row">
 					<div class="col-sm-4">
-						Partenaires
-							<ul>
-								<li><a href="voiture.com">voiture.com</a></li>
-								<li><a href="pizza.com">pizza.com</a></li>
-								<li><a href="matoiture.com">matoiture.com</a></li>
-								<li><a href="immobilierseo.com">immobilierseo.com</a></li>
-							</ul>		
+						<h4>Partenaires</h4>
+						<ul>
+							<li><a href="voiture.com">voiture.com</a></li>
+							<li><a href="pizza.com">pizza.com</a></li>
+							<li><a href="matoiture.com">matoiture.com</a></li>
+							<li><a href="immobilierseo.com">immobilierseo.com</a></li>
+						</ul>		
 					</div>
 					<div class="col-sm-4">
-						Annuaires liste 1
+						<h4>Annuaires liste 1</h4>
 						<ul>
 							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
 							<li><a href="annuaireseo.com">annuaireseo.com</a></li>
@@ -291,7 +291,7 @@
 						</ul>
 					</div>
 					<div class="col-sm-4">
-						Annuaires liste 2
+						<h4>Annuaires liste 2</h4>
 						<ul>
 							<li><a href="betterseo.com">betterseo.com</a></li>
 							<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
