correction de la hierarchie du niveau des titres

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 				</div>
 				<div class="row">
 					<div class="col-sm-4">
-						<h4>Partenaires</h4>
+						<h3 class="partenariats">Partenaires</h3>
 						<ul>
 							<li><a href="voiture.com">voiture.com</a></li>
 							<li><a href="pizza.com">pizza.com</a></li>
@@ -277,7 +277,7 @@
 						</ul>		
 					</div>
 					<div class="col-sm-4">
-						<h4>Annuaires liste 1</h4>
+						<h3 class="partenariats">Annuaires liste 1</h3>
 						<ul>
 							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
 							<li><a href="annuaireseo.com">annuaireseo.com</a></li>
@@ -291,7 +291,7 @@
 						</ul>
 					</div>
 					<div class="col-sm-4">
-						<h4>Annuaires liste 2</h4>
+						<h3 class="partenariats">Annuaires liste 2</h3>
 						<ul>
 							<li><a href="betterseo.com">betterseo.com</a></li>
 							<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
