--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 				<blockquote>
 					"L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes 
-					en ligne à Lyon."
+					en ligne à Lyon."<br>
 					<cite>
 						Maxime Guibard, PDG de À vos fourchettes
 					</cite>
-					<br>
+					
 				</blockquote>
 			</div>
 		</div>
@@ -167,8 +167,8 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
-					<img src="img/1.jpg" alt="Image représentant des livres ouverts." class="img-responsive portfolio-thumb">
+				<a href="#" data-lightbox="img/site-web-journal-local.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
+					<img src="img/site-web-journal-local.jpg" alt="Image représentant des livres ouverts." class="img-responsive portfolio-thumb">
 				</a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
@@ -178,8 +178,8 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
-					<img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Image d'une photographe prenant un cliché de nuit dans la rue.">
+				<a href="#" data-lightbox="img/site-web-photographes.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
+					<img src="img/site-web-photographes.jpg" class="img-responsive portfolio-thumb" alt="Image d'une photographe prenant un cliché de nuit dans la rue.">
 				</a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
@@ -191,8 +191,8 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
-					<img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="Image représantant des appareils photo, un ordinateur et divers éléments.">
+				<a href="#" data-lightbox="img/site-web-voyageur.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
+					<img src="img/site-web-voyageur.bmp" class="img-responsive portfolio-thumb" alt="Image représantant des appareils photo, un ordinateur et divers éléments.">
 				</a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
@@ -202,8 +202,8 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
-					<img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="Image d'une table de travail avec un ordinateur et divers éléments">
+				<a href="#" data-lightbox="img/site-web-agence-mariage.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
+					<img src="img/site-web-agence-mariage.bmp" class="img-responsive portfolio-thumb" alt="Image d'une table de travail avec un ordinateur et divers éléments">
 				</a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
