--- a/contact.html
+++ b/contact.html
@@ -42,10 +42,10 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html">Accueil</a>
+						<a href="index.html" aria-label="Accueil">Accueil</a>
 					</li>
 					<li>
-						<a href="contact.html">Contact</a>
+						<a href="contact.html" aria-label="Contact">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -82,26 +82,26 @@
 						<label for="name">
 							Nom
 						</label>
-						<input type="text" id="name" class="form-control" required>
+						<input type="text" id="name" class="form-control" aria-label="Nom" required>
 					</div>
 					<div class="form-group">
 						<label for="email">
 							Adresse email
 						</label>
-						<input id="email" class="form-control" type="email" required>
+						<input id="email" class="form-control" type="email" aria-label="Adresse email" required>
 					</div>
 					<div class="form-group">
 						<label  for="question">
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="text" required id="question">
+						<input class="form-control" type="text" required id="question" aria-label="question">
 					</div>
 					<div class="form-group">
 						<label for="message">
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+						</label><textarea id="message" class="form-control" rows="4" cols="50" required aria-label="votre message"></textarea>
 					</div> 
-					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit" aria-label="Envoyer le formulaire">
 						Envoyer
 					</button>
 				</form>
@@ -132,22 +132,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://twitter.com/agence-la-panthere-lyon" title="Twitter"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="https://twitter.com/agence-la-panthere-lyon" title="Twitter"><span class="fa fa-twitter icon-md" aria-label="Twitter"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://fr-fr.facebook.com/agence-la-panthere-lyon" title="Facebook"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="https://fr-fr.facebook.com/agence-la-panthere-lyon" title="Facebook"><span class="fa fa-facebook icon-md" aria-label="Facebook"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://dribbble.com/agence-la-panthere-lyon" title="Dribbble"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="https://dribbble.com/agence-la-panthere-lyon" title="Dribbble"><span class="fa fa-dribbble icon-md" aria-label="Dribbble"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.instagram.com/agence-la-panthere-lyon" title="Instagram"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="https://www.instagram.com/agence-la-panthere-lyon" title="Instagram"><span class="fa fa-instagram icon-md" aria-label="Instagram"></span></a>
 						</div>
 					</div>
 				</div>
