--- a/index.html
+++ b/index.html
@@ -37,19 +37,17 @@
 		<nav class="navbar row">
 			<div class="navbar-header">
 				<img src="img/agence-la-panthere-monochrome.svg" alt="Image représantant une tête de panthère, le logo de l'agence La Panthère" height="40" >
-				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1" aria-label="menu">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html">Accueil</a>
+						<a href="index.html" aria-label="Accueil">Accueil</a>
 					</li>
 					<li>
-					</li>
-					<li>
-						<a href="contact.html">Contact</a>
+						<a href="contact.html" aria-label="Contact">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -68,7 +66,7 @@
 					Agence La Panthère, entreprise de web design à Lyon
 				</h1>
 				<div class="text-center">
-					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" aria-label="Contact">Contact</a>
 				</div>
 			</div>
 		</div>
@@ -147,7 +145,7 @@
 					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site.
 					 Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, 
 					 qui seront facilement trouvable sur les moteurs de recherche. <br><br>
-					<a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
+					<a class="ltc-white bold-link" href="contact.html" aria-label="Contact">Contactez notre équipe</a><br>
 				</p>
 			</div>
 		</div>
@@ -225,7 +223,7 @@
 				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 			</h2>
 			<div class="col-sm-12 text-center">
-				<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+				<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" aria-label="Contact">Contact</a>
 			</div>
 		</div>
 	</div>
