--- a/contact.html
+++ b/contact.html
@@ -132,22 +132,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://twitter.com/agence-la-panthere-lyon" title="Twitter"><span class="fa fa-twitter icon-md" aria-label="Twitter"></span></a>
+							<a class="social" href="https://twitter.com/agence-la-panthere-lyon" title="Twitter"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://fr-fr.facebook.com/agence-la-panthere-lyon" title="Facebook"><span class="fa fa-facebook icon-md" aria-label="Facebook"></span></a>
+							<a class="social" href="https://fr-fr.facebook.com/agence-la-panthere-lyon" title="Facebook"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://dribbble.com/agence-la-panthere-lyon" title="Dribbble"><span class="fa fa-dribbble icon-md" aria-label="Dribbble"></span></a>
+							<a class="social" href="https://dribbble.com/agence-la-panthere-lyon" title="Dribbble"><span class="fa fa-dribbble icon-md" ></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.instagram.com/agence-la-panthere-lyon" title="Instagram"><span class="fa fa-instagram icon-md" aria-label="Instagram"></span></a>
+							<a class="social" href="https://www.instagram.com/agence-la-panthere-lyon" title="Instagram"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
