--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<h2 class="services">L'agence La Panthère est une agence de webdesign qui aide les entreprises à devenir attractives et visibles sur Internet.</h2>
+				<h2 class="services">L'agence La Panthère est une entreprise de web design située à Lyon qui aide les entreprises à devenir attractives et visibles sur Internet.</h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
