--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<img src="img/agence-la-panthere-monochrome.svg" alt="Image représantant une tête de panthère, le logo de l'agence La Panthère" height="40" >
+				<a href="index.html">
+					<img src="img/agence-la-panthere-monochrome.svg" alt="Image représantant une tête de panthère, le logo de l'agence La Panthère" height="40" >
+				</a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1" aria-label="menu">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
